--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   </head>
 
   <body>
-    <!-- My header starts from here -->
-    <div class="grey-bar">
+    <!-- Top orange navbar starts from here -->
+    <div class="top-nav-bar">
       <div>
         <p>MALAYIKA - Solidarité Intercontinentale</p>
       </div>
@@ -53,7 +53,7 @@
           />
         </svg>
 
-        <p>(+250)&nbsp;&nbsp;&nbsp;788-202-342</p>
+        <p>(+250)&nbsp;&nbsp;788-202-342</p>
 
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -69,24 +69,24 @@
         <p>malayika250@gmail.com</p>
       </div>
     </div>
+    <!-- Top orange navbar ends from here -->
+
+    <!-- Main navbar with options starts from here -->
     <header class="my-header" id="my-header">
-      <!-- End of navigation bar -->
       <nav class="nav-bar flex flex-jc-sb">
         <img
           src="images/logo/LOGO_ MALAYIKA.png"
           alt="logo-malayika"
-          class="logo"
+          style="width: 7%;"
         />
         <div class="hide-for-mobile links">
           <a href="index.html">Accueil</a>
           <a href="programme.html">Programme</a>
           <a href="apropos.html">A propos</a>
           <a href="contact.html">Contact</a>
-
-          <!-- Social links: twitter, facebook, instagram, whatsapp -->
         </div>
 
-        <div class="justTesting">
+        <div class="center-donate-btn">
           <a href="#" class="donate-btn">Donate</a>
         </div>
 
@@ -94,7 +94,6 @@
           <i class="fa-solid fa-bars menu"></i>
         </div> -->
       </nav>
-      <!-- End of navigation bar -->
 
       <!-- <div class="side">
         <div class="close"><i class="fa-solid fa-xmark"></i></div>
@@ -106,13 +105,15 @@
           <a href="contact.html">Contact</a>
         </div>
       </div> -->
+
+      <div class="background-img">
+        MALAYIKA - solidarité intercontinentale
+      </div>
     </header>
+    <!-- Main navbar with options ends here -->
 
-    <section class="first_section">
-      <p>MALAYIKA - solidarité intercontinentale</p>
-    </section>
-
-    <section class="second_section">
+    <!-- Hero section starts from here -->
+    <section class="hero-section">
       <div class="container reveal">
         <div class="text-card">
           <h2>BIENVENUE</h2>
@@ -128,9 +129,11 @@
         </div>
       </div>
     </section>
+    <!-- Hero section ends here -->
+
 
     <!-- another section that can be deleted -->
-    <section class="third-section">
+    <!-- <section class="third-section">
       <div class="container reveal">
         <div class="text-card">
           <h2>POURQUOI MALAYIKA?</h2>
@@ -144,7 +147,16 @@
           </p>
         </div>
       </div>
-    </section>
+    </section> -->
+    <div class="just-testing-2">
+      <div>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, ducimus dolor. Expedita quo consequuntur possimus, perspiciatis illum asperiores eligendi accusantium eveniet. Unde, iure autem? Perferendis vero eum omnis commodi veniam suscipit non eos laborum error odio quae, temporibus officiis voluptates.</p>
+        
+        <!-- <button><a href="http://">DONATE NOW</a></button> -->
+      </div>
+      <img src="images/content/IMG-20240602-WA0012.jpg" alt="image of a child">
+    </div>
 
     <section class="second_section">
       <div class="container reveal">
@@ -159,15 +171,16 @@
             leur créativité. Pour le domaine de la santé, nous retrouvons un
             manque d’accompagnement et une désinformation au sujet des principes
             d’hygiène, des maladies sexuellement transmissibles et des maladies
-            psycho-sociales<a href="#">Plus de details ici...</a>
+            psycho-sociales...<a href="#">plus de details ici</a>
           </p>
         </div>
       </div>
     </section>
-
     <!-- end of sections -->
+
+    <!-- Cards starts from here -->
     <div class="shop" id="shop">
-      <div id="product-id-${x.id}" class="item">
+      <div class="item">
         <img src="images/cards/IMG-20240601-WA0013-copy-2.jpg" alt="" />
         <div class="details">
           <h3>
@@ -202,7 +215,7 @@
         </div>
       </div>
 
-      <div id="product-id-${x.id}" class="item">
+      <div class="item">
         <img src="images/cards/IMG-20240601-WA0013-copy-2.jpg" alt="" />
         <div class="details">
           <h3>Distribution de colis alimentaire aux familles démunies</h3>
@@ -215,14 +228,20 @@
         </div>
       </div>
     </div>
+    <!-- Cards end here -->
+
+    <div class="just-testing">
+      <img src="images/content/IMG-20240602-WA0007.jpg" alt="image of a child">
+      <div>
+        <h2>Contribue pour ameliorer des vies</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, ducimus dolor. Expedita quo consequuntur possimus, perspiciatis illum asperiores eligendi accusantium eveniet. Unde, iure autem? Perferendis vero eum omnis commodi veniam suscipit non eos laborum error odio quae, temporibus officiis voluptates.</p>
+
+        <button><a href="http://">DONATE NOW</a></button>
+      </div>
+    </div>
 
     <!-- footer -->
-
-    <section class="contact-area footer" id="contact">
-      <!-- <div class="container"> -->
-      <!-- <div class="row"> -->
-      <!-- <div class="col-lg-6 offset-lg-3"> -->
-      <div class="contact-content text-center">
+      <footer class="contact-content text-center">
         <!-- <div center-image> -->
         <a href="#"
           ><img
@@ -239,14 +258,15 @@
         <!-- <div class="hr"></div> -->
         <h6>1120 Lorem ipsum dolor sit amet, KC 179050, Chandigarh.</h6>
         <h6>+250 2345 6789 12<span>|</span>+250 2345 6789 12</h6>
-      </div>
-      <!-- </div> -->
-      <!-- </div> -->
-      <!-- </div> -->
-      <footer>
-        <p>Copyright &copy; 2024 FONDATION MALAIKA All Rights Reserved.</p>
+        
+        <div class="divvv">
+          Copyright &copy; 2024 FONDATION MALAIKA All Rights Reserved
+        </div>
       </footer>
-    </section>
+      <!-- </div> -->
+      <!-- </div> -->
+      <!-- </div> -->
+    <!-- </section> -->
     <!-- =============== 1.9 Contact Area End ====================-->
     <!-- =============== 1.9 Footer Area Start ====================-->
 
