--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     /> -->
 
     <link rel="stylesheet" href="dist/style.css" />
-    <title>Malaika</title>
+    <title>Malayika</title>
   </head>
 
   <body>
@@ -80,10 +80,10 @@
           style="width: 7%;"
         />
         <div class="hide-for-mobile links">
-          <a href="index.html">Accueil</a>
-          <a href="programme.html">Programme</a>
-          <a href="apropos.html">A propos</a>
-          <a href="contact.html">Contact</a>
+          <a href="routes/accueille.html">Accueil</a>
+          <a href="routes/programmes.html">Programme</a>
+          <a href="routes/propos.html">A propos</a>
+          <a href="routes/contact.html">Contact</a>
         </div>
 
         <div class="center-donate-btn">
@@ -183,11 +183,11 @@
       <div class="item">
         <img src="images/cards/IMG-20240601-WA0013-copy-2.jpg" alt="" />
         <div class="details">
-          <h3>
+          <h5>
             Lutter contre la précarité dans les soins de santé et les IST
             (VIH/SIDA) en collaboration avec le dispensaire de Rushaki au nord
             du Rwanda:
-          </h3>
+          </h5>
           <p>
             En terme de santé publique, nous devons cibler les populations les
             plus à risque et leur offrir des services de proximité. Les
@@ -201,10 +201,10 @@
       <div class="item">
         <img src="images/cards/IMG-20240601-WA0013-copy-2.jpg" alt="" />
         <div class="details">
-          <h3>
+          <h5>
             Parrainer les enfants démunis afin de leur assurer un accompagnement
             social et une scolarisation
-          </h3>
+          </h5>
           <p>
             La collaboration se fera dans un premier temps avec les écoles
             primaires de Rushaki et de Mugina (au nord du Rwanda): Il s’agira
@@ -216,9 +216,9 @@
       </div>
 
       <div class="item">
-        <img src="images/cards/IMG-20240601-WA0013-copy-2.jpg" alt="" />
+        <img src="images/cards/IMG-20240601-WA0013.jpg" alt="" />
         <div class="details">
-          <h3>Distribution de colis alimentaire aux familles démunies</h3>
+          <h5>Distribution de colis alimentaire aux familles démunies</h5>
           <p>
             Énormément d’enfants sont dans l’obligation de travailler pour aider
             les parents à assurer des biens de première nécessité telle que la
